Enable the security manager when testing with Java 21