@@ -214,9 +214,26 @@
 
   <profiles>
     <profile>
+      <id>jpms11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-exports jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED ${argLine}</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>jpms</id>
       <activation>
-        <jdk>[9,)</jdk>
+        <jdk>[17,)</jdk>
       </activation>
       <build>
         <plugins>
@@ -231,6 +248,7 @@
                 --add-exports jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED
                 --add-opens java.base/sun.net.www.protocol.http=ALL-UNNAMED
                 --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED
+                -Djava.security.manager=allow
                 ${argLine}
               </argLine>
             </configuration>
